Fix for Fullscreen toolbar with multiple monitors on OSX

When checking for the active window during the menubar dropdown
progress, use the isMainWindow property instead of onActiveSpace.

If we have multiple monitors, onActiveSpace can return true, even if the
window isn't active.

BUG=606511

Review-Url: https://codereview.chromium.org/1979663002
Cr-Commit-Position: refs/heads/master@{#393642}

Former-commit-id: bde4e511c9b163ae0f2926a12834485cf9f6e996