chrome/browser/ui/cocoa/presentation_mode_controller.h
@@ -142,8 +142,8 @@ enum SlidingStyle {
 // Ranges from 0 to -22.
 - (CGFloat)menubarOffset;
 
-// Returns true if the window is on the active space.
-- (BOOL)isOnActiveSpace;
+// Returns true if the window is the main window.
+- (BOOL)isMainWindow;
 
 @end
 
